--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require":{
         "php":">=5.3.2",
         "contao/core":">=3.2,<4.0",
-        "contao-community-alliance/composer-plugin":"~2.0"
+        "contao-community-alliance/composer-plugin":"~2.0",
+        "codefog/contao-haste": "4.*"
     },
     "extra":{
         "contao": {
