--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     ],
     "require":{
         "php":">=5.3.2",
-        "contao/core":">=3.5.4,<4.0",
-        "contao-community-alliance/composer-plugin":"~2.0",
+        "contao/core":"^3.5.4 || ^4.1",
+        "contao-community-alliance/composer-plugin":"^2.4.0 || 3.*",
         "codefog/contao-haste": "~4.12"
     },
     "extra":{
