--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,31 @@
 {
-    "name":"terminal42/contao-fineuploader",
-    "description":"Uploader extension with chunking support for Contao Open Source CMS using FineUploader by Widen",
-    "keywords":["contao", "uploader", "fineuploader", "chunking"],
-    "type":"contao-module",
-    "license":"LGPL-3.0+",
-    "authors":[
+    "name": "terminal42/contao-fineuploader",
+    "description": "Uploader extension with chunking support for Contao Open Source CMS using FineUploader by Widen",
+    "keywords": [
+        "contao",
+        "uploader",
+        "fineuploader",
+        "chunking"
+    ],
+    "type": "contao-module",
+    "license": "LGPL-3.0+",
+    "authors": [
         {
-            "name":"terminal42 gmbh",
-            "homepage":"http://terminal42.ch"
+            "name": "terminal42 gmbh",
+            "homepage": "http://terminal42.ch"
         }
     ],
-    "require":{
-        "php":">=5.3.2",
-        "contao/core-bundle":"^3.5.4 || ^4.2.1",
-        "contao-community-alliance/composer-plugin":"^2.4.0 || 3.*",
-        "codefog/contao-haste": "~4.12"
+    "require": {
+        "php": ">=5.4.0",
+        "contao/core-bundle": "~4.2",
+        "contao-community-alliance/composer-plugin": "~3.0",
+        "codefog/contao-haste": "~4.14"
     },
-    "extra":{
-        "contao": {
-            "sources":{
-                "": "system/modules/fineuploader"
-            }
+    "autoload": {
+        "psr-4": {
+            "Terminal42\\FineUploaderBundle\\": "src/"
         }
-    }
+    },
+    "prefer-stable": true,
+    "minimum-stability": "dev"
 }
