--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "autoprefixer": "^6.3.6",
         "fine-uploader": "^5.10.0",
+        "sortablejs": "^1.4.2",
         "gulp": "^3.9.1",
         "gulp-clean-css": "^2.0.3",
         "gulp-postcss": "^6.1.1",
