--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
         "contao-community-alliance/composer-plugin": "~3.0",
         "codefog/contao-haste": "~4.14"
     },
+    "require-dev": {
+        "phpunit/phpunit": "5.5.*"
+    },
     "autoload": {
         "psr-4": {
             "Terminal42\\FineUploaderBundle\\": "src/"
