--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,23 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "contao/core-bundle": "~4.2",
-        "contao-community-alliance/composer-plugin": "~3.0",
-        "codefog/contao-haste": "~4.14"
+        "contao/core-bundle": "^4.4",
+        "codefog/contao-haste": "~4.17"
     },
     "require-dev": {
+        "contao/manager-plugin": "^2.0",
         "phpunit/phpunit": "5.5.*"
+    },
+    "conflict": {
+        "contao/manager-plugin": "<2.0 || >=3.0"
     },
     "autoload": {
         "psr-4": {
             "Terminal42\\FineUploaderBundle\\": "src/"
         }
+    },
+    "extra": {
+        "contao-manager-plugin": "Terminal42\\FineUploaderBundle\\ContaoManager\\Plugin"
     },
     "prefer-stable": true,
     "minimum-stability": "dev"
