Make all services public by default

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,4 +1,7 @@
 services:
+    _defaults:
+        public: true
+
     terminal42_fineuploader.assets_manager:
         class: Terminal42\FineUploaderBundle\AssetsManager
         arguments:
