--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,10 @@
             "homepage":"http://terminal42.ch"
         }
     ],
+    "support": {
+        "issues": "https://github.com/terminal42/contao-fineuploader/issues",
+        "source": "https://github.com/terminla42/contao-fineuploader"
+    },
     "require":{
         "php":">=5.3.2",
         "contao/core-bundle":"^3.5.4 || ^4.2.1",
