--- a/config/services.yml
+++ b/config/services.yml
@@ -46,12 +46,14 @@ services:
         class: Terminal42\FineUploaderBundle\RequestHandler\BackendHandler
         arguments:
             - "@event_dispatcher"
+            - "@contao.routing.scope_matcher"
 
     terminal42_fineuploader.request.frontend_handler:
         class: Terminal42\FineUploaderBundle\RequestHandler\FrontendHandler
         arguments:
             - "@event_dispatcher"
             - "@monolog.logger.contao"
+            - "@contao.routing.scope_matcher"
 
     # Listeners
     terminal42_fineuploader.listener.backend:
@@ -61,6 +63,7 @@ services:
             - "@monolog.logger.contao"
             - "@terminal42_fineuploader.request.backend_handler"
             - "@request_stack"
+            - "@contao.routing.scope_matcher"
 
     terminal42_fineuploader.listener.file_upload:
         class: Terminal42\FineUploaderBundle\EventListener\FileUploadListener
