--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
     },
     "require": {
         "php": "^7.2 || ^8.0",
-        "contao/core-bundle": "^4.9",
-        "codefog/contao-haste": "^4.17"
+        "contao/core-bundle": "^4.9 || ^5.0",
+        "codefog/contao-haste": "5.x-dev@dev"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.0",
