Do not require Haste anymore

--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,8 @@
         "source": "https://github.com/terminal42/contao-fineuploader"
     },
     "require": {
-        "php": "^7.2 || ^8.0",
-        "contao/core-bundle": "^4.9 || ^5.0",
-        "codefog/contao-haste": "5.x-dev@dev"
+        "php": "^7.4 || ^8.0",
+        "contao/core-bundle": "^4.9 || ^5.0"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.0",
