Remove the session service in favor of request stack

--- a/composer.json
+++ b/composer.json
@@ -47,5 +47,11 @@
         "cs-fixer": [
             "vendor/bin/ecs check src/ --fix --ansi"
         ]
+    },
+    "config": {
+        "allow-plugins": {
+            "ocramius/package-versions": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
