No longer require Haste (#92)
* Update to Haste v5 (composer only for now)

* Do not require Haste anymore

* Remove the session service in favor of request stack

* Remove the session service in favor of request stack

* Fix the compatibility with Contao 5

* Raise the minimum Contao version to 4.13

* No need to use Config to fake debug mode anymore

* Remove all HTML comments in JavaScript before initializing FineUploader. Also copy the icons from Contao bundle to the extension to avoid Contao 4/5 version difference build problem.

--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,8 @@
         "source": "https://github.com/terminal42/contao-fineuploader"
     },
     "require": {
-        "php": "^7.2 || ^8.0",
-        "contao/core-bundle": "^4.9",
-        "codefog/contao-haste": "^4.17"
+        "php": "^7.4 || ^8.0",
+        "contao/core-bundle": "^4.13 || ^5.0"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.0",
@@ -48,5 +47,11 @@
         "cs-fixer": [
             "vendor/bin/ecs check src/ --fix --ansi"
         ]
+    },
+    "config": {
+        "allow-plugins": {
+            "ocramius/package-versions": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
