--- a/config/services.yml
+++ b/config/services.yml
@@ -16,7 +16,7 @@ services:
         class: Terminal42\FineUploaderBundle\ChunkUploader
         arguments:
             - "@terminal42_fineuploader.filesystem"
-            - "@session"
+            - "@request_stack"
 
     terminal42_fineuploader.filesystem:
         class: Terminal42\FineUploaderBundle\Filesystem
@@ -29,7 +29,7 @@ services:
         arguments:
             - "@terminal42_fineuploader.chunk_uploader"
             - "@terminal42_fineuploader.filesystem"
-            - "@session"
+            - "@request_stack"
 
     terminal42_fineuploader.validator:
         class: Terminal42\FineUploaderBundle\Validator
@@ -40,6 +40,7 @@ services:
         class: Terminal42\FineUploaderBundle\WidgetHelper
         arguments:
             - "@terminal42_fineuploader.filesystem"
+            - "@contao.image.studio"
 
     # Request handlers
     terminal42_fineuploader.request.backend_handler:
