--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     },
     "require": {
         "php": "^7.4 || ^8.0",
-        "contao/core-bundle": "^4.13 || ^5.0"
+        "contao/core-bundle": "^4.13 || ^5.0",
+        "symfony/filesystem": "^5.4 || ^6.4"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.0",
